src/objects/PR_Account__c.object
<CustomObject>
    <description>Accounts linked to a project that are not Client or Owner</description>
    <fields>
        <fullName>PR_Account_Name__c</fullName>
        <formula>PR_Accts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PR Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR_Account_Role__c</fullName>
        <label>PR Account Role</label>
        <picklist>
            <picklistValues>
                <fullName>Architecture Firm of Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitting Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stakeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcontractor</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PR_Accts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PR Accts</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>PR_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Account_Function__c</fullName>
        <description>Text area to display function of the Account on this project</description>
        <label>Project Account Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Subcontractors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to return to project record.</inlineHelpText>
        <label>Related Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Subcontractors</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PR Account</label>
    <nameField>
        <displayFormat>PRAcct-{00000}</displayFormat>
        <label>PRAccID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PR Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>